syntax = "proto3";
package chain4energy.c4echain.cfevesting;

option go_package = "github.com/chain4energy/c4e-chain/x/cfevesting/types";

message VestingTypes {
  
  repeated VestingType vesting_types = 1; 
}

message VestingType {
  
  // vesting type name
  string name = 1; 
  // period of locked coins (minutes) from vesting start
  int64 lockup_period = 2; 
  // period of veesting coins (minutes) from lockup period end
  int64 vesting_period = 3; 
  // vested coin periodical releasing (minutes)
  int64 token_releasing_period = 4; 
  // defines if vesting type allows delegation
  bool delegations_allowed = 5; 
}

